--- a/main.html
+++ b/main.html
@@ -9,6 +9,92 @@
 </head>
 <body>
     <!-- add table here -->
+	<style>
+		     body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f6f8;
+            padding: 20px;
+        }
+
+        table {
+            width: 80%;
+            margin: auto;
+            border-collapse: collapse;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            background-color: #fff;
+        }
+
+        thead {
+            background-color: #4CAF50;
+            color: white;
+        }
+
+        th, td {
+            border: 1px solid #ddd;
+            padding: 12px 15px;
+            text-align: center;
+        }
+
+        tbody tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        tbody tr:hover {
+            background-color: #e0f7fa;
+        }
+
+        caption {
+            font-size: 1.5em;
+            margin-bottom: 10px;
+            color: #333;
+            font-weight: bold;
+        }
+	</style>
+	
+    <table>
+        <caption>Top 5 Highest Grossing Movies (Fictional)</caption>
+        <thead>
+            <tr>
+                <th>Rank</th>
+                <th>Movie Title</th>
+                <th>Release Year</th>
+                <th>Worldwide Gross</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Galaxy Wars: Final Front</td>
+                <td>2023</td>
+                <td>$2.9 Billion</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Avengers: Reborn</td>
+                <td>2022</td>
+                <td>$2.7 Billion</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>The Mystic Chronicles</td>
+                <td>2024</td>
+                <td>$2.4 Billion</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Dino World: Extinction</td>
+                <td>2021</td>
+                <td>$2.2 Billion</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Robot Revolution</td>
+                <td>2023</td>
+                <td>$2.0 Billion</td>
+            </tr>
+        </tbody>
+    </table>
+	
 
         
 </body>
